refactor: numeric talent ids